crates/forge_app/src/snapshots/forge_app__operation__tests__task_list_empty.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<task_list
  total_tasks="0"
  pending_tasks="0"
  in_progress_tasks="0"
  done_tasks="0"
>
</task_list>
