crates/forge_app/src/snapshots/forge_app__operation__tests__task_list_mark_done_operation.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<task_list
  total_tasks="2"
  pending_tasks="1"
  in_progress_tasks="0"
  done_tasks="1"
>
<task
  id="1"
  status="DONE"
><![CDATA[Task to complete]]>
</task>
<task
  id="2"
  status="PENDING"
><![CDATA[Another task]]>
</task>
</task_list>
