crates/forge_app/src/snapshots/forge_app__operation__tests__task_list_mixed_status_tasks.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<task_list
  total_tasks="3"
  pending_tasks="1"
  in_progress_tasks="1"
  done_tasks="1"
>
<task
  id="1"
  status="IN_PROGRESS"
><![CDATA[First task]]>
</task>
<task
  id="2"
  status="DONE"
><![CDATA[Second task]]>
</task>
<task
  id="3"
  status="PENDING"
><![CDATA[Third task]]>
</task>
</task_list>
