crates/forge_app/src/snapshots/forge_app__operation__tests__task_list_single_pending_task.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<task_list
  total_tasks="1"
  pending_tasks="1"
  in_progress_tasks="0"
  done_tasks="0"
>
<task
  id="1"
  status="PENDING"
><![CDATA[Write documentation]]>
</task>
</task_list>
